--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,11 @@ seven_ten:
     - "RACK_ENV=docker_development"
   links:
     - postgres:pg
+
+nginx:
+  dockerfile: Dockerfile.nginx
+  build: ./
   ports:
-    - "443:443"
+    - "3000:80"
+  links:
+    - seven_ten:seven_ten
