--- a/docker/nginx.staging.conf
+++ b/docker/nginx.staging.conf
@@ -6,6 +6,8 @@ server {
   server_name seven-ten-staging.zooniverse.org;
   include /etc/nginx/ssl.default.conf;
 
+  rewrite ^/seven-ten(.*)$ $1
+
   proxy_buffer_size 8k;
   proxy_set_header Host $http_host;
   proxy_set_header X-Real-IP $remote_addr;
