Add sidekiq start script

--- a/docker/supervisor.sidekiq.conf
+++ b/docker/supervisor.sidekiq.conf
@@ -4,7 +4,7 @@ nodaemon=true
 [program:sidekiq]
 user=root
 directory=/rails_app
-command=sidekiq
+command=/rails_app/docker/start_sidekiq.sh
 redirect_stderr=true
 autostart=true
 autorestart=true
