Fix nginx rewrite rules

--- a/docker/nginx.staging.conf
+++ b/docker/nginx.staging.conf
@@ -6,7 +6,7 @@ server {
   server_name seven-ten-staging.zooniverse.org;
   include /etc/nginx/ssl.default.conf;
 
-  rewrite ^/seven-ten(.*)$ $1
+  rewrite ^/seven-ten(.*)$ $1 last;
 
   proxy_buffer_size 8k;
   proxy_set_header Host $http_host;
