Clean up installs, rm supervisor

--- a/Dockerfile.sidekiq
+++ b/Dockerfile.sidekiq
@@ -10,13 +10,8 @@ ARG RAILS_ENV
 WORKDIR /rails_app
 
 RUN apt-get update && \
-  apt-get upgrade -y && \
-  apt-get install -y supervisor libpq-dev python-dev && \
-  apt-get clean
-
-RUN wget -O - https://bootstrap.pypa.io/get-pip.py | python && \
-  pip install -U awscli && \
-  aws configure set s3.signature_version s3v4
+  apt-get install --no-install-recommends -y libpq-dev && \
+  apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY ./Gemfile /rails_app/
 COPY ./Gemfile.lock /rails_app/
@@ -26,9 +21,7 @@ RUN cd /rails_app && \
 
 COPY ./ /rails_app
 
-COPY docker/supervisor.sidekiq.conf /etc/supervisor/conf.d/sidekiq.conf
-
 ENV RAILS_ENV $RAILS_ENV
 ENV RACK_ENV $RAILS_ENV
 
-ENTRYPOINT /usr/bin/supervisord
+CMD ["/rails_app/docker/start_sidekiq.sh"]
