--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,46 @@
-postgres:
-  image: postgres
-  environment:
-    - "POSTGRES_USER=seven_ten"
-    - "POSTGRES_PASSWORD=seven_ten"
-  ports:
-    - "5432:5432"
+version: '2'
+services:
+  postgres:
+    image: postgres
+    environment:
+      - "POSTGRES_USER=seven_ten"
+      - "POSTGRES_PASSWORD=seven_ten"
+    ports:
+      - "5432:5432"
 
-redis:
-  image: redis
-  ports:
-    - "6379:6379"
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes
 
-seven_ten:
-  dockerfile: Dockerfile
-  build: ./
-  environment:
-    - "RAILS_ENV=docker_development"
-    - "RACK_ENV=docker_development"
-  links:
-    - postgres:pg
-    - redis:redis
+  app:
+    build:
+      context: .
+      args:
+        RAILS_ENV: docker_development
+    volumes:
+      - ./:/rails_app
+    ports:
+      - "3000:80"
+    environment:
+      - "RAILS_ENV=docker_development"
+      - "RACK_ENV=docker_development"
+    links:
+      - redis:redis
+      - postgres:postgres
 
-sidekiq:
-  dockerfile: Dockerfile.sidekiq
-  build: ./
-  environment:
-    - "RAILS_ENV=docker_development"
-    - "RACK_ENV=docker_development"
-  links:
-    - postgres:pg
-    - redis:redis
+  sidekiq:
+    build:
+      context: .
+      args:
+        RAILS_ENV: docker_development
+    volumes:
+      - ./:/rails_app
+    environment:
+      - "RAILS_ENV=docker_development"
+    links:
+      - redis:redis
+      - postgres:postgres
 
-nginx:
-  dockerfile: Dockerfile.nginx
-  build: ./
-  ports:
-    - "3000:80"
-  links:
-    - seven_ten:seven_ten
+
