--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       context: .
       args:
         RAILS_ENV: docker_development
+    command: ["/app/docker/start_sidekiq.sh"]
     volumes:
       - ./:/rails_app
     environment:
