use postgres v11 image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   postgres:
-    image: postgres
+    image: postgres:11
     environment:
       - "POSTGRES_USER=seven_ten"
       - "POSTGRES_PASSWORD=seven_ten"
